tests/reference/print_generic-t2-fd0fc6c.out
Starting main...
Arena created...
Parsing args...
Arg 1: tests/t2.mlir
Arg 2: --no-error-banner
Arg 3: --line=-1
Arg 4: --column=-1
Done parsing args. use_construction=0
Syntax error (16:39): Use of undefined SSA value
                %0 = memref.load %arg0[%arg2, %arg3] : memref<10x20xf32>
                                      ^
